--- a/Prog3Master/Prog3Master.vcxproj
+++ b/Prog3Master/Prog3Master.vcxproj
@@ -136,6 +136,8 @@
     <ClCompile Include="prog0202.cpp" />
     <ClCompile Include="prog0204.cpp" />
     <ClCompile Include="prog0205.cpp" />
+    <ClCompile Include="prog0301.cpp" />
+    <ClCompile Include="prog0302.cpp" />
     <ClCompile Include="prog203.cpp" />
     <ClCompile Include="Prog3Master.cpp" />
   </ItemGroup>
@@ -145,6 +147,7 @@
   <ItemGroup>
     <Text Include="data.txt" />
     <Text Include="log.txt" />
+    <Text Include="popu.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
