--- a/Prog3Master/Prog3Master.vcxproj
+++ b/Prog3Master/Prog3Master.vcxproj
@@ -140,6 +140,7 @@
     <ClCompile Include="prog0302.cpp" />
     <ClCompile Include="prog0401.cpp" />
     <ClCompile Include="prog0402.cpp" />
+    <ClCompile Include="prog0501.cpp" />
     <ClCompile Include="prog203.cpp" />
     <ClCompile Include="Prog3Master.cpp" />
     <ClCompile Include="prog403.cpp" />
@@ -149,8 +150,13 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="data.txt" />
+    <Text Include="data_huge.txt" />
+    <Text Include="data_small.txt" />
     <Text Include="log.txt" />
     <Text Include="popu.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="tree.xls" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
