--- a/Prog3Master/Prog3Master.vcxproj
+++ b/Prog3Master/Prog3Master.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="prog0401.cpp" />
     <ClCompile Include="prog0402.cpp" />
     <ClCompile Include="prog0501.cpp" />
+    <ClCompile Include="prog0701.cpp" />
     <ClCompile Include="prog203.cpp" />
     <ClCompile Include="Prog3Master.cpp" />
     <ClCompile Include="prog403.cpp" />
@@ -155,6 +156,8 @@
     <Text Include="data_small.txt" />
     <Text Include="log.txt" />
     <Text Include="popu.txt" />
+    <Text Include="random_10k.txt" />
+    <Text Include="random_50k.txt" />
   </ItemGroup>
   <ItemGroup>
     <None Include="tree.xls" />
