--- a/Prog3Master/Prog3Master.vcxproj.filters
+++ b/Prog3Master/Prog3Master.vcxproj.filters
@@ -93,6 +93,12 @@
     <ClCompile Include="prog0701.cpp">
       <Filter>ソース ファイル\prog07</Filter>
     </ClCompile>
+    <ClCompile Include="prog0801.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="prog0901.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="prog.h">
