--- a/Prog3Master/Prog3Master.vcxproj
+++ b/Prog3Master/Prog3Master.vcxproj
@@ -144,6 +144,8 @@
     <ClCompile Include="prog0701.cpp" />
     <ClCompile Include="prog0801.cpp" />
     <ClCompile Include="prog0901.cpp" />
+    <ClCompile Include="prog1001.cpp" />
+    <ClCompile Include="prog1002.cpp" />
     <ClCompile Include="prog203.cpp" />
     <ClCompile Include="Prog3Master.cpp" />
     <ClCompile Include="prog403.cpp" />
