--- a/Prog3Master/Prog3Master.vcxproj.filters
+++ b/Prog3Master/Prog3Master.vcxproj.filters
@@ -108,6 +108,12 @@
     <ClCompile Include="prog1101.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="prog1202.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="prog1201.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="prog.h">
