--- a/Prog3Master/Prog3Master.vcxproj
+++ b/Prog3Master/Prog3Master.vcxproj
@@ -147,6 +147,8 @@
     <ClCompile Include="prog1001.cpp" />
     <ClCompile Include="prog1002.cpp" />
     <ClCompile Include="prog1101.cpp" />
+    <ClCompile Include="prog1201.cpp" />
+    <ClCompile Include="prog1202.cpp" />
     <ClCompile Include="prog203.cpp" />
     <ClCompile Include="Prog3Master.cpp" />
     <ClCompile Include="prog403.cpp" />
