--- a/Prog3Master/Prog3Master.vcxproj
+++ b/Prog3Master/Prog3Master.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="prog1101.cpp" />
     <ClCompile Include="prog1201.cpp" />
     <ClCompile Include="prog1202.cpp" />
+    <ClCompile Include="prog1301.cpp" />
     <ClCompile Include="prog203.cpp" />
     <ClCompile Include="Prog3Master.cpp" />
     <ClCompile Include="prog403.cpp" />
