--- a/Prog3Master/Prog3Master.vcxproj.filters
+++ b/Prog3Master/Prog3Master.vcxproj.filters
@@ -114,6 +114,9 @@
     <ClCompile Include="prog1201.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="prog1301.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="prog.h">
