--- a/Prog3Master/Prog3Master.vcxproj
+++ b/Prog3Master/Prog3Master.vcxproj
@@ -150,6 +150,8 @@
     <ClCompile Include="prog1201.cpp" />
     <ClCompile Include="prog1202.cpp" />
     <ClCompile Include="prog1301.cpp" />
+    <ClCompile Include="prog1401.cpp" />
+    <ClCompile Include="prog1402.cpp" />
     <ClCompile Include="prog203.cpp" />
     <ClCompile Include="Prog3Master.cpp" />
     <ClCompile Include="prog403.cpp" />
