--- a/Prog3Master/Prog3Master.vcxproj.filters
+++ b/Prog3Master/Prog3Master.vcxproj.filters
@@ -117,6 +117,12 @@
     <ClCompile Include="prog1301.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="prog1401.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="prog1402.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="prog.h">
